--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             
             <div class="btn-group">
                 <a href="files/resume.pdf" class="btn   active">Download CV</a>
-                <a href="mailto:sowndharnewbie@gmail.com" class="btn">Contact</a>
+                <a href="mailto:sunilthati27cs@gmail.com" class="btn">Contact</a>
             </div>
 
             <div class="social">
                 <a href="mailto:sunilthati27cs@gmail.com"><i class="fa fa-envelope"></i></a>
                 <a href="https://github.com/Sunil1532"><i class="fa-brands fa-github"></i></a>
-                <a href="https://leetcode.com/sowndharnewbie/"><i class="fa fa-code"></i></a>
+                <a href="https://leetcode.com/u/sunilthati27cs/"><i class="fa fa-code"></i></a>
                 <a href="https://www.linkedin.com/in/sunil1729/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
@@ -170,13 +170,13 @@
             <div class="projects">
                 <!-- 1st Project -->
                 <div class="project">
-                    <i class="fa fa-coffee"></i>
+                    <i class="fa fa-mobile"></i>
                     <h4>ChatVerse Web Application</h4>
                     <p>Real time chatting app where people can chat via rooms,integrated with websocket protocol.</p>
                 </div>
                  <!-- 2nd Project -->
                  <div class="project">
-                    <i class="fa fa-car"></i>
+                    <i class="fa fa-file"></i>
                     <h4>ALL IN ONE COMPRESSOR</h4>
                     <p> We can compress any type of file , built with compression engines , backend foccussed. TECH STACK : MERN STACK</p>
                 </div>
